# tpm2-sign

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  tpm.h  ui.h
src/: main.cc  tpm.cc
